--- a/intro.html
+++ b/intro.html
@@ -16,6 +16,14 @@
     <li>Express</li>
 </ul>
 
-<p></p>
 </body>
+<style>
+    body{
+        text-align: center ;
+    }
+    li{
+        list-style-type:none ;
+        /*list-style: none;*/
+    }
+</style>
 </html>
