--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 		/>
 		<meta name="description" content="Start your development with a Design System for Bootstrap 4 and Vue.js." />
 		<meta name="author" content="Creative Tim, Cristi Jora" />
-		<link href="logo.ico" rel="icon" type="image/x-ico" />
+<!--		<link href="logo.ico" rel="icon" type="image/x-ico" />-->
 		<title>基于区块链的版权保护系统</title>
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
